--- a/index.css
+++ b/index.css
@@ -87,6 +87,7 @@ header {
   background-size: cover;
   background-repeat: no-repeat;
   height: 100vh;
+  /* background-attachment: fixed; */
 }
 
 #section-1 {
